test/bad/generics/def07.px

func f<V>(V v) V def
    return

f(0)
